[package]
name = "kanji"
version = "1.0.1"
authors = ["Colin Woodbury <colin@fosskers.ca>"]
edition = "2018"
description = "A library for the handling and analysis of Japanese text, particularly Kanji."
homepage = "https://github.com/fosskers/rs-kanji"
repository = "https://github.com/fosskers/rs-kanji"
readme = "README.md"
license = "MIT"
keywords = ["japan", "japanese", "kanji", "unicode"]
categories = ["internationalization"]

[[test]]
name = "serde"
required-features = ["serde"]

[dependencies]
serde = { version = "1.0", optional = true }

[dev-dependencies]
version-sync = "0.9"
serde = "1.0"
serde_json = "1.0"
